feat: add schema prisma to tracks
